<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros_bbs3d</name>
    <version>0.1.0</version>
    <description>ros_bbs3d</description>
    <maintainer email="contact@map4.jp">MAP IV</maintainer>

    <license>MIT</license>
    <author>Koki Aoki</author>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>libpcl-all-dev</depend>
    <depend>eigen</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
